--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,10 +8,12 @@ set(simpledb_library_deps)
 set_property(GLOBAL PROPERTY USE_FOLDERS ON)
 
 include(cmake/util.cmake)
+include(cmake/dep.cmake)
 
 if(UNIX)
   option(BUILD_SHARED_LIBS "Build Shared Libraries" OFF)
 endif()
+option(BUILD_TEST "Build unit test (requires catch2)" OFF)
 
 set(LIB_TYPE STATIC)
 if(BUILD_SHARED_LIBS)
@@ -19,3 +21,4 @@ if(BUILD_SHARED_LIBS)
 endif()
 
 add_subdirectory(simpledb)
+add_subdirectory(test)
